tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00037.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00037.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i[2], "x", align 4
    %2 = alloca s32i*, "p", align 8
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 7 : s32i
    %5 = const 1 : s64i
    %6 = get_element %1[%5] : s32i*
    store %4, %6, align 4
    %7 = const 0 : s64i
    %8 = get_element %1[%7] : s32i*
    store %8, %2, align 8
    %9 = load %2 : s32i*, align 8
    %10 = const 1 : s32i
    %11 = ptr_stride %9, %10 : s32i*
    store %11, %2, align 8
    scope {
        %23 = load %2 : s32i*, align 8
        %24 = load %23 : s32i, align 4
        %25 = const 7 : s32i
        %26 = cmp ne %24, %25 : bool
        if %26 {
            %27 = const 1 : s32i
            store %27, %0
            %28 = load %0 : s32i
            return %28
        }
        yield
    }
    scope {
        %14 = const 1 : s64i
        %15 = get_element %1[%14] : s32i*
        %16 = const 0 : s64i
        %17 = get_element %1[%16] : s32i*
        %18 = ptr_diff %15, %17 : s64i
        %19 = const 1 : s64i
        %20 = cmp ne %18, %19 : bool
        if %20 {
            %21 = const 1 : s32i
            store %21, %0
            %22 = load %0 : s32i
            return %22
        }
        yield
    }
    %12 = const 0 : s32i
    store %12, %0
    %13 = load %0 : s32i
    return %13
}
