tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00038.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00038.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "x", align 4
    %2 = alloca s32i*, "p", align 8
    %3 = const 0 : s32i
    store %3, %0
    scope {
        %28 = const 4 : u64i
        %29 = const 2 : u64i
        %30 = cmp lt %28, %29 : bool
        if %30 {
            %31 = const 1 : s32i
            store %31, %0
            %32 = load %0 : s32i
            return %32
        }
        yield
    }
    scope {
        %23 = const 4 : u64i
        %24 = const 2 : u64i
        %25 = cmp lt %23, %24 : bool
        if %25 {
            %26 = const 1 : s32i
            store %26, %0
            %27 = load %0 : s32i
            return %27
        }
        yield
    }
    scope {
        %18 = const 1 : u64i
        %19 = const 1 : u64i
        %20 = cmp lt %18, %19 : bool
        if %20 {
            %21 = const 1 : s32i
            store %21, %0
            %22 = load %0 : s32i
            return %22
        }
        yield
    }
    scope {
        %11 = const 4 : u64i
        %12 = const 2 : u64i
        %13 = sub %11, %12 : u64i
        %14 = const 0 : u64i
        %15 = cmp lt %13, %14 : bool
        if %15 {
            %16 = const 1 : s32i
            store %16, %0
            %17 = load %0 : s32i
            return %17
        }
        yield
    }
    scope {
        %6 = const 8 : u64i
        %7 = const 8 : u64i
        %8 = cmp ne %6, %7 : bool
        if %8 {
            %9 = const 1 : s32i
            store %9, %0
            %10 = load %0 : s32i
            return %10
        }
        yield
    }
    %4 = const 0 : s32i
    store %4, %0
    %5 = load %0 : s32i
    return %5
}
