tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00039.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00039.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca void*, "p", align 8
    %2 = alloca s32i, "x", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 2 : s32i
    store %4, %2, align 4
    %5 = cast(bitcast) %2 : void*
    store %5, %1, align 8
    scope {
        %8 = load %1 : void*, align 8
        %9 = cast(bitcast) %8 : s32i*
        %10 = load %9 : s32i, align 4
        %11 = const 2 : s32i
        %12 = cmp ne %10, %11 : bool
        if %12 {
            %13 = const 1 : s32i
            store %13, %0
            %14 = load %0 : s32i
            return %14
        }
        yield
    }
    %6 = const 0 : s32i
    store %6, %0
    %7 = load %0 : s32i
    return %7
}
