tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00040.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00040.c" (c, x86_64-unknown-linux-gnu)
global t : s32i* = #cir.ptr<null> [external, default, align 8, dso_local]
global N : s32i = 0 [external, default, align 4, dso_local]

fn chk(%arg3: s32i, %arg4: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: s32i, %arg4: s32i):
        %78 = alloca s32i, "x", align 4
        %79 = alloca s32i, "y", align 4
        %80 = alloca s32i, "__retval", align 4
        %81 = alloca s32i, "i", align 4
        %82 = alloca s32i, "r", align 4
        store %arg3, %78
        store %arg4, %79
        scope {
            %85 = const 0 : s32i
            store %85, %81, align 4
            store %85, %82, align 4
            for cond: {
                %232 = load %81 : s32i, align 4
                %233 = const 8 : s32i
                %234 = cmp lt %232, %233 : bool
                condition %234
            } step: {
                %86 = load %81 : s32i, align 4
                %87 = inc %86 : s32i [nsw]
                store %87, %81, align 4
                yield
            } do {
                scope {
                    %88 = load %82 : s32i, align 4
                    %89 = load %78 : s32i, align 4
                    %90 = const 8 : s32i
                    %91 = load %81 : s32i, align 4
                    %92 = mul %90, %91 : s32i [nsw]
                    %93 = add %89, %92 : s32i [nsw]
                    %94 = cast(integral) %93 : s64i
                    %95 = get_global @t : s32i**
                    %96 = load %95 : s32i*, align 8
                    %97 = ptr_stride %96, %94 : s32i*
                    %98 = load %97 : s32i, align 4
                    %99 = add %88, %98 : s32i [nsw]
                    store %99, %82, align 4
                    %100 = load %82 : s32i, align 4
                    %101 = load %81 : s32i, align 4
                    %102 = const 8 : s32i
                    %103 = load %79 : s32i, align 4
                    %104 = mul %102, %103 : s32i [nsw]
                    %105 = add %101, %104 : s32i [nsw]
                    %106 = cast(integral) %105 : s64i
                    %107 = get_global @t : s32i**
                    %108 = load %107 : s32i*, align 8
                    %109 = ptr_stride %108, %106 : s32i*
                    %110 = load %109 : s32i, align 4
                    %111 = add %100, %110 : s32i [nsw]
                    store %111, %82, align 4
                    scope {
                        %202 = load %78 : s32i, align 4
                        %203 = load %81 : s32i, align 4
                        %204 = add %202, %203 : s32i [nsw]
                        %205 = const 8 : s32i
                        %206 = cmp lt %204, %205 : bool
                        %207 = cast(bool_to_int) %206 : s32i
                        %208 = load %79 : s32i, align 4
                        %209 = load %81 : s32i, align 4
                        %210 = add %208, %209 : s32i [nsw]
                        %211 = const 8 : s32i
                        %212 = cmp lt %210, %211 : bool
                        %213 = cast(bool_to_int) %212 : s32i
                        %214 = and %207, %213 : s32i
                        %215 = cast(int_to_bool) %214 : bool
                        if %215 {
                            %216 = load %82 : s32i, align 4
                            %217 = load %78 : s32i, align 4
                            %218 = load %81 : s32i, align 4
                            %219 = add %217, %218 : s32i [nsw]
                            %220 = const 8 : s32i
                            %221 = load %79 : s32i, align 4
                            %222 = load %81 : s32i, align 4
                            %223 = add %221, %222 : s32i [nsw]
                            %224 = mul %220, %223 : s32i [nsw]
                            %225 = add %219, %224 : s32i [nsw]
                            %226 = cast(integral) %225 : s64i
                            %227 = get_global @t : s32i**
                            %228 = load %227 : s32i*, align 8
                            %229 = ptr_stride %228, %226 : s32i*
                            %230 = load %229 : s32i, align 4
                            %231 = add %216, %230 : s32i [nsw]
                            store %231, %82, align 4
                            yield
                        }
                        yield
                    }
                    scope {
                        %172 = load %78 : s32i, align 4
                        %173 = load %81 : s32i, align 4
                        %174 = add %172, %173 : s32i [nsw]
                        %175 = const 8 : s32i
                        %176 = cmp lt %174, %175 : bool
                        %177 = cast(bool_to_int) %176 : s32i
                        %178 = load %79 : s32i, align 4
                        %179 = load %81 : s32i, align 4
                        %180 = sub %178, %179 : s32i [nsw]
                        %181 = const 0 : s32i
                        %182 = cmp ge %180, %181 : bool
                        %183 = cast(bool_to_int) %182 : s32i
                        %184 = and %177, %183 : s32i
                        %185 = cast(int_to_bool) %184 : bool
                        if %185 {
                            %186 = load %82 : s32i, align 4
                            %187 = load %78 : s32i, align 4
                            %188 = load %81 : s32i, align 4
                            %189 = add %187, %188 : s32i [nsw]
                            %190 = const 8 : s32i
                            %191 = load %79 : s32i, align 4
                            %192 = load %81 : s32i, align 4
                            %193 = sub %191, %192 : s32i [nsw]
                            %194 = mul %190, %193 : s32i [nsw]
                            %195 = add %189, %194 : s32i [nsw]
                            %196 = cast(integral) %195 : s64i
                            %197 = get_global @t : s32i**
                            %198 = load %197 : s32i*, align 8
                            %199 = ptr_stride %198, %196 : s32i*
                            %200 = load %199 : s32i, align 4
                            %201 = add %186, %200 : s32i [nsw]
                            store %201, %82, align 4
                            yield
                        }
                        yield
                    }
                    scope {
                        %142 = load %78 : s32i, align 4
                        %143 = load %81 : s32i, align 4
                        %144 = sub %142, %143 : s32i [nsw]
                        %145 = const 0 : s32i
                        %146 = cmp ge %144, %145 : bool
                        %147 = cast(bool_to_int) %146 : s32i
                        %148 = load %79 : s32i, align 4
                        %149 = load %81 : s32i, align 4
                        %150 = add %148, %149 : s32i [nsw]
                        %151 = const 8 : s32i
                        %152 = cmp lt %150, %151 : bool
                        %153 = cast(bool_to_int) %152 : s32i
                        %154 = and %147, %153 : s32i
                        %155 = cast(int_to_bool) %154 : bool
                        if %155 {
                            %156 = load %82 : s32i, align 4
                            %157 = load %78 : s32i, align 4
                            %158 = load %81 : s32i, align 4
                            %159 = sub %157, %158 : s32i [nsw]
                            %160 = const 8 : s32i
                            %161 = load %79 : s32i, align 4
                            %162 = load %81 : s32i, align 4
                            %163 = add %161, %162 : s32i [nsw]
                            %164 = mul %160, %163 : s32i [nsw]
                            %165 = add %159, %164 : s32i [nsw]
                            %166 = cast(integral) %165 : s64i
                            %167 = get_global @t : s32i**
                            %168 = load %167 : s32i*, align 8
                            %169 = ptr_stride %168, %166 : s32i*
                            %170 = load %169 : s32i, align 4
                            %171 = add %156, %170 : s32i [nsw]
                            store %171, %82, align 4
                            yield
                        }
                        yield
                    }
                    scope {
                        %112 = load %78 : s32i, align 4
                        %113 = load %81 : s32i, align 4
                        %114 = sub %112, %113 : s32i [nsw]
                        %115 = const 0 : s32i
                        %116 = cmp ge %114, %115 : bool
                        %117 = cast(bool_to_int) %116 : s32i
                        %118 = load %79 : s32i, align 4
                        %119 = load %81 : s32i, align 4
                        %120 = sub %118, %119 : s32i [nsw]
                        %121 = const 0 : s32i
                        %122 = cmp ge %120, %121 : bool
                        %123 = cast(bool_to_int) %122 : s32i
                        %124 = and %117, %123 : s32i
                        %125 = cast(int_to_bool) %124 : bool
                        if %125 {
                            %126 = load %82 : s32i, align 4
                            %127 = load %78 : s32i, align 4
                            %128 = load %81 : s32i, align 4
                            %129 = sub %127, %128 : s32i [nsw]
                            %130 = const 8 : s32i
                            %131 = load %79 : s32i, align 4
                            %132 = load %81 : s32i, align 4
                            %133 = sub %131, %132 : s32i [nsw]
                            %134 = mul %130, %133 : s32i [nsw]
                            %135 = add %129, %134 : s32i [nsw]
                            %136 = cast(integral) %135 : s64i
                            %137 = get_global @t : s32i**
                            %138 = load %137 : s32i*, align 8
                            %139 = ptr_stride %138, %136 : s32i*
                            %140 = load %139 : s32i, align 4
                            %141 = add %126, %140 : s32i [nsw]
                            store %141, %82, align 4
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        %83 = load %82 : s32i, align 4
        store %83, %80
        %84 = load %80 : s32i
        return %84
}
fn go(%arg0: s32i, %arg1: s32i, %arg2: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i, %arg2: s32i):
        %20 = alloca s32i, "n", align 4
        %21 = alloca s32i, "x", align 4
        %22 = alloca s32i, "y", align 4
        %23 = alloca s32i, "__retval", align 4
        store %arg0, %20
        store %arg1, %21
        store %arg2, %22
        scope {
            %70 = load %20 : s32i, align 4
            %71 = const 8 : s32i
            %72 = cmp eq %70, %71 : bool
            if %72 {
                %73 = get_global @N : s32i*
                %74 = load %73 : s32i, align 4
                %75 = inc %74 : s32i [nsw]
                store %75, %73, align 4
                %76 = const 0 : s32i
                store %76, %23
                %77 = load %23 : s32i
                return %77
            }
            yield
        }
        scope {
            for cond: {
                %67 = load %22 : s32i, align 4
                %68 = const 8 : s32i
                %69 = cmp lt %67, %68 : bool
                condition %69
            } step: {
                %26 = load %22 : s32i, align 4
                %27 = inc %26 : s32i [nsw]
                store %27, %22, align 4
                yield
            } do {
                scope {
                    scope {
                        for cond: {
                            %64 = load %21 : s32i, align 4
                            %65 = const 8 : s32i
                            %66 = cmp lt %64, %65 : bool
                            condition %66
                        } step: {
                            %29 = load %21 : s32i, align 4
                            %30 = inc %29 : s32i [nsw]
                            store %30, %21, align 4
                            yield
                        } do {
                            scope {
                                %31 = load %21 : s32i, align 4
                                %32 = load %22 : s32i, align 4
                                %33 = call @chk(%31, %32) : s32i [all]
                                %34 = const 0 : s32i
                                %35 = cmp eq %33, %34 : bool
                                if %35 {
                                    %36 = load %21 : s32i, align 4
                                    %37 = const 8 : s32i
                                    %38 = load %22 : s32i, align 4
                                    %39 = mul %37, %38 : s32i [nsw]
                                    %40 = add %36, %39 : s32i [nsw]
                                    %41 = cast(integral) %40 : s64i
                                    %42 = get_global @t : s32i**
                                    %43 = load %42 : s32i*, align 8
                                    %44 = ptr_stride %43, %41 : s32i*
                                    %45 = load %44 : s32i, align 4
                                    %46 = inc %45 : s32i [nsw]
                                    store %46, %44, align 4
                                    %47 = load %20 : s32i, align 4
                                    %48 = const 1 : s32i
                                    %49 = add %47, %48 : s32i [nsw]
                                    %50 = load %21 : s32i, align 4
                                    %51 = load %22 : s32i, align 4
                                    %52 = call @go(%49, %50, %51) : s32i [all]
                                    %53 = load %21 : s32i, align 4
                                    %54 = const 8 : s32i
                                    %55 = load %22 : s32i, align 4
                                    %56 = mul %54, %55 : s32i [nsw]
                                    %57 = add %53, %56 : s32i [nsw]
                                    %58 = cast(integral) %57 : s64i
                                    %59 = get_global @t : s32i**
                                    %60 = load %59 : s32i*, align 8
                                    %61 = ptr_stride %60, %58 : s32i*
                                    %62 = load %61 : s32i, align 4
                                    %63 = dec %62 : s32i [nsw]
                                    store %63, %61, align 4
                                    yield
                                }
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    %28 = const 0 : s32i
                    store %28, %21, align 4
                    yield
                }
                yield
            }
            yield
        }
        %24 = const 0 : s32i
        store %24, %23
        %25 = load %23 : s32i
        return %25
}
fn calloc(%arg0: u64i, %arg1: u64i) -> void* [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @calloc : ((u64i, u64i) -> void*)*
    %3 = const 64 : u64i
    %4 = const 4 : u64i
    %5 = call @calloc(%3, %4) : void* [all]
    %6 = cast(bitcast) %5 : s32i*
    %7 = get_global @t : s32i**
    store %6, %7, align 8
    %8 = const 0 : s32i
    %9 = const 0 : s32i
    %10 = const 0 : s32i
    %11 = call @go(%8, %9, %10) : s32i [all]
    scope {
        %14 = get_global @N : s32i*
        %15 = load %14 : s32i, align 4
        %16 = const 92 : s32i
        %17 = cmp ne %15, %16 : bool
        if %17 {
            %18 = const 1 : s32i
            store %18, %0
            %19 = load %0 : s32i
            return %19
        }
        yield
    }
    %12 = const 0 : s32i
    store %12, %0
    %13 = load %0 : s32i
    return %13
}
