tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00041.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00041.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "n", align 4
    %2 = alloca s32i, "t", align 4
    %3 = alloca s32i, "c", align 4
    %4 = alloca s32i, "p", align 4
    %5 = const 0 : s32i
    store %5, %0
    %6 = const 0 : s32i
    store %6, %3, align 4
    %7 = const 2 : s32i
    store %7, %1, align 4
    scope {
        while {
            %36 = load %1 : s32i, align 4
            %37 = const 5000 : s32i
            %38 = cmp lt %36, %37 : bool
            condition %38
        } do {
            scope {
                %15 = const 2 : s32i
                store %15, %2, align 4
                %16 = const 1 : s32i
                store %16, %4, align 4
                scope {
                    while {
                        %31 = load %2 : s32i, align 4
                        %32 = load %2 : s32i, align 4
                        %33 = mul %31, %32 : s32i [nsw]
                        %34 = load %1 : s32i, align 4
                        %35 = cmp le %33, %34 : bool
                        condition %35
                    } do {
                        scope {
                            scope {
                                %25 = load %1 : s32i, align 4
                                %26 = load %2 : s32i, align 4
                                %27 = rem %25, %26 : s32i
                                %28 = const 0 : s32i
                                %29 = cmp eq %27, %28 : bool
                                if %29 {
                                    %30 = const 0 : s32i
                                    store %30, %4, align 4
                                    yield
                                }
                                yield
                            }
                            %23 = load %2 : s32i, align 4
                            %24 = inc %23 : s32i [nsw]
                            store %24, %2, align 4
                            yield
                        }
                        yield
                    }
                    yield
                }
                %17 = load %1 : s32i, align 4
                %18 = inc %17 : s32i [nsw]
                store %18, %1, align 4
                scope {
                    %19 = load %4 : s32i, align 4
                    %20 = cast(int_to_bool) %19 : bool
                    if %20 {
                        %21 = load %3 : s32i, align 4
                        %22 = inc %21 : s32i [nsw]
                        store %22, %3, align 4
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    scope {
        %10 = load %3 : s32i, align 4
        %11 = const 669 : s32i
        %12 = cmp ne %10, %11 : bool
        if %12 {
            %13 = const 1 : s32i
            store %13, %0
            %14 = load %0 : s32i
            return %14
        }
        yield
    }
    %8 = const 0 : s32i
    store %8, %0
    %9 = load %0 : s32i
    return %9
}
