tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00043.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00043.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_s, "v", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 1 : s32i
    %4 = get_member %1[0] "x" : s32i*
    store %3, %4, align 4
    %5 = const 2 : s32i
    %6 = get_member %1[1] "nest" : rec_anon2E0*
    %7 = get_member %6[0] "y" : s32i*
    store %5, %7, align 4
    %8 = const 3 : s32i
    %9 = get_member %1[1] "nest" : rec_anon2E0*
    %10 = get_member %9[1] "z" : s32i*
    store %8, %10, align 4
    scope {
        %13 = get_member %1[0] "x" : s32i*
        %14 = load %13 : s32i, align 4
        %15 = get_member %1[1] "nest" : rec_anon2E0*
        %16 = get_member %15[0] "y" : s32i*
        %17 = load %16 : s32i, align 4
        %18 = add %14, %17 : s32i [nsw]
        %19 = get_member %1[1] "nest" : rec_anon2E0*
        %20 = get_member %19[1] "z" : s32i*
        %21 = load %20 : s32i, align 4
        %22 = add %18, %21 : s32i [nsw]
        %23 = const 6 : s32i
        %24 = cmp ne %22, %23 : bool
        if %24 {
            %25 = const 1 : s32i
            store %25, %0
            %26 = load %0 : s32i
            return %26
        }
        yield
    }
    %11 = const 0 : s32i
    store %11, %0
    %12 = load %0 : s32i
    return %12
}
