tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00046.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00046.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_s, "v", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 1 : s32i
    %4 = get_member %1[0] "a" : s32i*
    store %3, %4, align 4
    %5 = const 2 : s32i
    %6 = get_member %1[1] "" : rec_anon2E0*
    %7 = get_member %6[0] "b1" : s32i*
    store %5, %7, align 4
    %8 = const 3 : s32i
    %9 = get_member %1[2] "" : rec_anon2E1*
    %10 = get_member %9[0] "" : rec_anon2E2*
    %11 = get_member %10[0] "" : rec_anon2E3*
    %12 = get_member %11[0] "c" : s32i*
    store %8, %12, align 4
    %13 = const 4 : s32i
    %14 = get_member %1[3] "" : rec_anon2E4*
    %15 = get_member %14[0] "d" : s32i*
    store %13, %15, align 4
    scope {
        %48 = get_member %1[0] "a" : s32i*
        %49 = load %48 : s32i, align 4
        %50 = const 1 : s32i
        %51 = cmp ne %49, %50 : bool
        if %51 {
            %52 = const 1 : s32i
            store %52, %0
            %53 = load %0 : s32i
            return %53
        }
        yield
    }
    scope {
        %34 = get_member %1[1] "" : rec_anon2E0*
        %35 = get_member %34[0] "b1" : s32i*
        %36 = load %35 : s32i, align 4
        %37 = const 2 : s32i
        %38 = cmp ne %36, %37 : bool
        %39 = ternary %38 ? { : bool
            %43 = get_member %1[1] "" : rec_anon2E0*
            %44 = get_member %43[1] "b2" : s32i*
            %45 = load %44 : s32i, align 4
            %46 = const 2 : s32i
            %47 = cmp ne %45, %46 : bool
            yield %47
        } : {
            %42 = const #false : bool
            yield %42
        }
        if %39 {
            %40 = const 2 : s32i
            store %40, %0
            %41 = load %0 : s32i
            return %41
        }
        yield
    }
    scope {
        %25 = get_member %1[2] "" : rec_anon2E1*
        %26 = get_member %25[0] "" : rec_anon2E2*
        %27 = get_member %26[0] "" : rec_anon2E3*
        %28 = get_member %27[0] "c" : s32i*
        %29 = load %28 : s32i, align 4
        %30 = const 3 : s32i
        %31 = cmp ne %29, %30 : bool
        if %31 {
            %32 = const 3 : s32i
            store %32, %0
            %33 = load %0 : s32i
            return %33
        }
        yield
    }
    scope {
        %18 = get_member %1[3] "" : rec_anon2E4*
        %19 = get_member %18[0] "d" : s32i*
        %20 = load %19 : s32i, align 4
        %21 = const 4 : s32i
        %22 = cmp ne %20, %21 : bool
        if %22 {
            %23 = const 4 : s32i
            store %23, %0
            %24 = load %0 : s32i
            return %24
        }
        yield
    }
    %16 = const 0 : s32i
    store %16, %0
    %17 = load %0 : s32i
    return %17
}
